fix(RP-8): fix the bottom strip location content is overflowed

--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -83,9 +83,9 @@
 }
 
 .login-modal-bottom-strip {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    position: relative;
+    bottom: -32px;
+    box-shadow: 32px 0 #ff0000, -32px 0 #ff0000;
     border: none;
     width: 100%;
     height: 4px;
